--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "cypress": "^13.13.0",
+    "cypress-mailosaur": "^2.13.0",
     "typescript": "^5.5.4"
   }
 }
